Fix content overflow and set height

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,4 @@
-%flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.App {
+    min-height: 97.52vh;
+    overflow: auto;
 }
